--- a/book/main.tex
+++ b/book/main.tex
@@ -68,8 +68,8 @@
 \begin{tikzpicture}[remember picture,overlay]
 \node[inner sep=0pt] (background) at (current page.center) {\includegraphics[width=\paperwidth]{background.pdf}};
 \draw (current page.center) node [fill=ocre!30!white,fill opacity=0.6,text opacity=1,inner sep=1cm]{\Huge\centering\bfseries\sffamily\parbox[c][][t]{\paperwidth}{\centering Computational Fluid Dynamics\\[15pt] % Book title
-{\Large An Open Source Approach}\\[20pt] % Subtitle
-{\huge Dr. Brian C. Vermeire}}}; % Author name
+{\huge An Open Source Approach}\\[20pt] % Subtitle
+{\large Brian C. Vermeire, Carlos A. Pereira, and Hamidreza Karbasian}}}; % Author name
 \end{tikzpicture}
 \vfill
 \endgroup
